test/parser/global-unexpected-token.cx
// RUN: %not %cx -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:2: error: unexpected 'this'
 this
